[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/proto_cartridge/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://scenes/CartridgeProgress.gd" type="Script" id=2]
[ext_resource path="res://art/progress_bar/under.png" type="Texture" id=3]
[ext_resource path="res://art/progress_bar/progress.png" type="Texture" id=4]

[node name="CartridgeControl" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="CartridgeProgressBar" type="TextureProgress" parent="."]
margin_left = 13.0
margin_right = 74.0
margin_bottom = 16.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="CartridgeTimer" type="Timer" parent="."]

[node name="CartridgeIcon" type="Sprite" parent="."]
position = Vector2( 9.25, 6 )
scale = Vector2( 0.359375, 0.3125 )
texture = ExtResource( 1 )

[connection signal="timeout" from="CartridgeTimer" to="." method="_on_CartridgeTimer_timeout"]
